fixed blurry map with gmaps4rails_map

--- a/app/assets/stylesheets/gmaps4rails.css
+++ b/app/assets/stylesheets/gmaps4rails.css
@@ -9,12 +9,11 @@
   width: 800px;
 }
 
-.gmaps4rails_map img{max-width: none;} {
-  width: 120%;
-  height: 500px;
-  margin-left: 5%;
-  margin-right: 5%;
+.gmaps4rails_map {
+  width: 800px;
+  height: 400px;
 }
+
 .bing_map {
    position: absolute;
    top: 20;
